--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>6.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>6.2.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
